- endpoints:   - get fitness logbook   - get fitness graph
